--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,11 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-arm64
-beautifulsoup4=4.12.2=py38hca03da5_0
-blas=1.0=openblas
-bottleneck=1.3.5=py38heec5a64_0
-brotlipy=0.7.0=py38h1a28f6b_1002
-ca-certificates=2023.12.12=hca03da5_0
-certifi=2023.11.17=py38hca03da5_0
-cffi=1.15.1=py38h80987f9_3
-charset-normalizer=2.0.4=pyhd3eb1b0_0
-cryptography=41.0.2=py38h6204c90_0
-et-xmlfile=1.1.0=pypi_0
-idna=3.4=py38hca03da5_0
-libcxx=14.0.6=h848a8c0_0
-libffi=3.4.4=hca03da5_0
-libgfortran=5.0.0=11_3_0_hca03da5_28
-libgfortran5=11.3.0=h009349e_28
-libopenblas=0.3.21=h269037a_0
-llvm-openmp=14.0.6=hc6e5704_0
-ncurses=6.4=h313beb8_0
-numexpr=2.8.4=py38h79ee842_1
-numpy=1.24.3=py38h1398885_0
-numpy-base=1.24.3=py38h90707a3_0
-openpyxl=3.1.2=pypi_0
-openssl=3.0.12=h1a28f6b_0
-pandas=2.0.3=py38h46d7db6_0
-pip=23.2.1=py38hca03da5_0
-pycparser=2.21=pyhd3eb1b0_0
-pyopenssl=23.2.0=py38hca03da5_0
-pysocks=1.7.1=py38hca03da5_0
-python=3.8.17=hb885b13_0
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python-tzdata=2023.3=pyhd3eb1b0_0
-pytz=2023.3.post1=py38hca03da5_0
-readline=8.2=h1a28f6b_0
-requests=2.31.0=py38hca03da5_0
-setuptools=68.0.0=py38hca03da5_0
-six=1.16.0=pyhd3eb1b0_1
-soupsieve=2.4=py38hca03da5_0
-sqlite=3.41.2=h80987f9_0
-tk=8.6.12=hb8d0fd4_0
-urllib3=1.26.16=py38hca03da5_0
-wheel=0.38.4=py38hca03da5_0
-xz=5.4.2=h80987f9_0
-zlib=1.2.13=h5a0b063_0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+idna==3.6
+numpy==1.26.3
+pandas==2.2.0
+python-dateutil==2.8.2
+pytz==2023.4
+requests==2.31.0
+six==1.16.0
+tzdata==2023.4
+urllib3==2.1.0
