添加官方剧本工具转化功能

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ token_jinx_tri.py
 json/冲突规则.json
 json/冲突规则_github.json
 json/全员失忆.json
+json/全员失忆_水印.json
+json/心理博弈.json
+json/心理博弈_tf.json
+json/横行霸道.json
+json/横行霸道_tf.json
 
 url/url_change_team.txt
 url/url_get_ability.txt
