更新至戏法师

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ json/全角色_hr_冲突规则.json
 json/冲突规则.json
 json/全员失忆.json
 json/全员失忆_水印.json
+json/山雨欲来.json
 json/心理博弈.json
 json/心理博弈_tf.json
 json/横行霸道.json
