--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,7 @@ json/冲突规则.json
 json/全员失忆.json
 json/全员失忆_水印.json
 json/山雨欲来.json
-json/心理博弈.json
-json/心理博弈_tf.json
-json/横行霸道.json
-json/横行霸道_tf.json
+json_script
 
 url/url_change_team.txt
 url/url_get_ability.txt
